--- a/index.html
+++ b/index.html
@@ -547,6 +547,21 @@ I finally stuck with Lullaby because it felt right.
                 </div>
             </div>
         </div>
+       <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="discography__item">
+                    <div class="discography__item__pic">
+                        <a href="https://fanlink.to/lullabybylooz " target="_blank"><img src="img/discography/disco-1.jpg" alt=""></a>
+                    </div>
+                    <div class="discography__item__text">
+                        <span>Hiraeth ft. Risa Patrick</span>
+                        <h4>Loozmathai</h4>
+                        <a href="https://open.spotify.com/track/32KZ0JQ4zZ7TMJJL8M45jX" target="_blank"><img src="/assets/img/discography/pngkey.com-spotify-png-195418.png" alt="" width="160px" height="55px"></a><br></br>
+                        <a href="https://music.apple.com/in/album/a-lullaby-for-the-broken/1577913256?i=1577913261" target="_blank"><img src="/assets/img/discography/toppng.com-listen-on-apple-music-logo-783x287.png" alt="" width="160px" height="50px"></a>
+                        
+                        </div>
+                </div>
+            </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="discography__item">
