--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ I finally stuck with Lullaby because it felt right.
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="discography__item">
                     <div class="discography__item__pic">
-                        <a href="https://fanlink.to/lullabybylooz " target="_blank"><img src="img/discography/disco-1.jpg" alt=""></a>
+                        <a href="https://fanlink.to/lullabybylooz " target="_blank"><img src="img/discography/dico-4.jpg" alt=""></a>
                     </div>
                     <div class="discography__item__text">
                         <span>Hiraeth ft. Risa Patrick</span>
