--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ I finally stuck with Lullaby because it felt right.
   </section><!-- End Contact Section -->
 
  <div class="credits">
-     Designed by <a href="https://websitesforlowprice.com/" target="_blank">WebMagnets</a>
+   <!--  Designed by <a href="https://websitesforlowprice.com/" target="_blank">WebMagnets</a> -->
   </div> 
 
   <!-- Vendor JS Files -->
