--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </style>
     </head>
     <body>
-      <h2>I'm a Singer, Songwriter, Producer,</br> Composer & Marketer from Kochi </h2>
+      <h2>I'm a Singer-Songwriter, Composer & Producer from Kochi, Kerala, India </h2>
     </body>
       <nav id="navbar" class="navbar">
         <ul>
